[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/game/menus/Menu.gd" type="Script" id=1]
[ext_resource path="res://src/utils/PlainButton.tscn" type="PackedScene" id=2]

[node name="Menu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
custom_constants/separation = 20
alignment = 1
script = ExtResource( 1 )

[node name="PlayBtn" parent="." instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 210.0
margin_right = 120.0
margin_bottom = 240.0
text = "PLAY"

[node name="WorldBtn" parent="." instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 260.0
margin_right = 120.0
margin_bottom = 290.0
text = "WORLD"

[node name="OptionsBtn" parent="." instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 310.0
margin_right = 120.0
margin_bottom = 340.0
text = "OPTIONS"

[node name="CreditsBtn" parent="." instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 360.0
margin_right = 120.0
margin_bottom = 390.0
text = "CREDITS"
